# trading

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  index.html  package-lock.json  package.json  pyproject.toml  vitest.config.ts
backend/: __init__.py  config.py  db.py  main.py  sample_data.py  schemas.py  time_utils.py
backend/providers/: __init__.py  alpaca.py  rss.py
backend/services/: backtesting.py  crypto_dataset.py  dataset.py  market_data.py  news.py  paper.py  sandbox.py  sentiment.py  strategies.py
docs/: DATABASE_USAGE.md  STRATEGY_SCRIPT_README.md
frontend/src/: App.tsx  api.ts  defaultStrategy.ts  strategyExamples.ts  styles.css  types.ts
outputs/strategy_search/: build_strategy_report.mjs  node_modules  strategy_search_report.xlsx  strategy_search_report.xlsx.inspect.ndjson  strategy_search_results.csv  strategy_search_results.json  top_strategy.json
outputs/strategy_search_smoke/: strategy_search_results.csv  strategy_search_results.json  top_strategy.json
scripts/: backfill_crypto_dataset.py  backfill_crypto_dataset.sh  backfill_historical_dataset.sh  backtest_generated_search_top.py  export_training_dataset.py  run_strategy_search.py  start_services.sh  stop_services.sh
strategies/: ai_arx_regime.py  ai_arx_regime_model.json  ai_sentiment_momentum.py  ai_sentiment_momentum_model.json  generated_search_top.py  train_ai_arx_regime.py  train_ai_sentiment_momentum.py
tests/: conftest.py  test_api.py  test_backtesting.py  test_dataset.py  test_market_data.py  test_news.py  test_paper.py  test_sentiment.py
(+14 files in other folders)
