[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-lab"
version = "0.1.0"
description = "Local web platform for stock-market strategy research, news sentiment, and Python backtesting."
requires-python = ">=3.12,<3.14"
dependencies = [
  "duckdb>=1.0.0",
  "fastapi>=0.115.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "python-dateutil>=2.9.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
ai = [
  "torch>=2.4.0",
  "transformers>=4.44.0",
]
backtest = [
  "vectorbt>=0.27.0",
]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]
dev = [
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["backend*"]
